[gd_scene load_steps=11 format=3 uid="uid://dhsn6ti6xckfp"]

[ext_resource type="Script" uid="uid://e5pdxcr7l1jj" path="res://objects/portal/portal.gd" id="1_v7atq"]
[ext_resource type="Texture2D" uid="uid://dau4a0yyakypf" path="res://Abyss of oblivion assets workshop/void.png" id="2_ah4id"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1ffj6"]
radius = 44.0114

[sub_resource type="AtlasTexture" id="AtlasTexture_0u872"]
atlas = ExtResource("2_ah4id")
region = Rect2(0, 0, 85, 85)

[sub_resource type="AtlasTexture" id="AtlasTexture_hh6n6"]
atlas = ExtResource("2_ah4id")
region = Rect2(85, 0, 85, 85)

[sub_resource type="AtlasTexture" id="AtlasTexture_ptdr5"]
atlas = ExtResource("2_ah4id")
region = Rect2(170, 0, 85, 85)

[sub_resource type="AtlasTexture" id="AtlasTexture_4n53e"]
atlas = ExtResource("2_ah4id")
region = Rect2(255, 0, 85, 85)

[sub_resource type="AtlasTexture" id="AtlasTexture_xu86o"]
atlas = ExtResource("2_ah4id")
region = Rect2(340, 0, 85, 85)

[sub_resource type="AtlasTexture" id="AtlasTexture_ctvuc"]
atlas = ExtResource("2_ah4id")
region = Rect2(425, 0, 85, 85)

[sub_resource type="SpriteFrames" id="SpriteFrames_jr6l0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0u872")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hh6n6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ptdr5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4n53e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xu86o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ctvuc")
}],
"loop": true,
"name": &"void",
"speed": 7.0
}]

[node name="portal" type="Area2D"]
modulate = Color(0, 0, 0, 1)
self_modulate = Color(0, 0, 0, 1)
script = ExtResource("1_v7atq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_1ffj6")

[node name="void_sprite" type="AnimatedSprite2D" parent="."]
z_index = 3
sprite_frames = SubResource("SpriteFrames_jr6l0")
animation = &"void"

[node name="cool_down" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="cool_down" to="." method="_on_cool_down_timeout"]
